test: complete memris-core test style refactor sweep (#10)
* test: add shared test utilities for runtime suites

* test: consolidate scan and numeric handler suites

* test: move index benchmarks to manual execution

* test: align core and runtime tests with assertj style

* test: standardize heap tests and concurrency assertions

* test: normalize integration tests to single-assert snapshots

* test: collapse multi-assert between-range checks

* test: normalize remaining core/runtime assertions to snapshots

Consolidate multi-assert checks into single composite assertions so test style stays consistent while preserving behavior across converter, lexer, planner, and handler suites.

* Fix null-safety and hardcoded booleans in TableGeneratorTest snapshots (#11)

* Initial plan

* fix: make TableGeneratorTest ClassSummary null-safe and compute assignability

Co-authored-by: Thejuampi <7971361+Thejuampi@users.noreply.github.com>

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: Thejuampi <7971361+Thejuampi@users.noreply.github.com>

* [WIP] Refactor memris-core test style based on review feedback (#12)

* Initial plan

* fix: restore interrupt flag when catching InterruptedException in TestArena

Co-authored-by: Thejuampi <7971361+Thejuampi@users.noreply.github.com>

* refactor: extract interrupt handling to helper method

Co-authored-by: Thejuampi <7971361+Thejuampi@users.noreply.github.com>

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: Thejuampi <7971361+Thejuampi@users.noreply.github.com>

* test: assert converter non-null before use in TypeConverterRegistryTest (#13)

* Initial plan

* test: add null checks for converter retrievals in TypeConverterRegistryTest

Co-authored-by: Thejuampi <7971361+Thejuampi@users.noreply.github.com>

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by